--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 
 /* Container styling */
-.all {
-    display: flex;
-  justify-content: center;
-  height: 100vh;
+.all2 {
+    margin-top: 15px;
+  margin-left: 455px;
 }
-  
+.all1 {
+    margin-top: 15px;
+  margin-left: 600px;
+}
   /* Input styling */
   .addtsk input {
     padding: 8px;
@@ -99,12 +101,6 @@
   .task > div:first-child {
     flex-grow: 1;
   }
-  
-  /* Button container styling */
-  .buttons {
-    display: flex;
-    align-items: center;
-  }  
   h1{
     text-align: center;
   }
